2008-01-08  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gstdecodebin.c: (try_to_link_1):
	  Make sure we error out correctly if we can't activate one of
	  the elements we've added.  Fixes #508138.
	  
2008-01-07  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Bastien Nocera <hadess at hadess net>

	* ext/alsa/gstalsamixer.c: (gst_alsa_mixer_get_volume),
	  (check_if_volumes_are_the_same), (gst_alsa_mixer_set_volume):
	  Use snd_mixer_selem_set_{playback|capture}_volume_all() if
	  the volume is the same for all channels. This works around
	  some problem in alsa that leaves us with inconsistent state
	  for some reason (#486840).

2008-01-07  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Jerone Young <jerone at gmail com>

	* ext/alsa/gstalsamixer.c: (gst_alsa_mixer_find_master_mixer):
	  If there's no mixer track by the name of 'Master' or 'Front',
	  check if there's one called 'PCM' before trying the generic
	  fallback logic (fixes #506928, where we pick 'Mic' as master
	  track for the AD1984 card in a Thinkpad T61/X61 laptop).

2008-01-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplay-enum.c:
	(register_gst_autoplug_select_result),
	(gst_autoplug_select_result_get_type), (register_gst_play_flags),
	(gst_play_flags_get_type):
	* gst/playback/gstplay-enum.h:
	Add enums for configuration flags.

	* gst/playback/gstplaybin2.c: (gst_play_bin_class_init),
	(init_group), (gst_play_bin_init), (gst_play_bin_set_property),
	(gst_play_bin_get_property), (no_more_pads_cb),
	(autoplug_select_cb), (gst_play_bin_change_state):
	Merge mode with flags.
	Add more property getters/setters, defaults and docs.
	Add properties to get number of audio/video/text streams.
	Create sink object in _init so that we can always rely on it being
	there.

	* gst/playback/gstplaysink.c: (gst_play_sink_init),
	(gen_video_chain), (gen_audio_chain), (gen_vis_chain),
	(activate_vis), (gst_play_sink_reconfigure),