@@ -1,5 +1,10 @@
 2008-01-08  Tim-Philipp Müller  <tim at centricular dot net>
 
+	* gst-libs/gst/pbutils/descriptions.c: (formats):
+	  Add description strings for ID3, APE, and ICY tags.
+
+2008-01-08  Tim-Philipp Müller  <tim at centricular dot net>
+
 	* gst/playback/gstdecodebin.c: (try_to_link_1):
 	  Make sure we error out correctly if we can't activate one of
 	  the elements we've added.  Fixes #508138.
